# ubiquitous_display_simulations

./: README.md
ubiquitous_display_control/: CMakeLists.txt  package.xml
ubiquitous_display_control/config/: base_controller.yaml  gazebo_controller.yaml  multi_ubiquitous_display_controller.yaml  pantilt_controller.yaml  ubiquitous_display_controller.yaml
ubiquitous_display_control/launch/: multi_ubiquitous_display_control.launch  ubiquitous_display_control.launch
ubiquitous_display_gazebo/: CMakeLists.txt  package.xml
ubiquitous_display_gazebo/launch/: cc2f.launch  circuit.launch  corridor_test.launch  corridor_test_with_actor.launch  empty.launch  fixed_kinect.launch  gas_station.launch  kinect.launch  multi_world_train_2.launch  simple_corridor.launch  stage_1.launch  standing.launch  test_world.launch  test_world_with_actor.launch  train_world_2.launch
ubiquitous_display_gazebo/models/cc2f/: model.config  model.sdf
ubiquitous_display_gazebo/models/corridor_test/: model.config  model.sdf
ubiquitous_display_gazebo/models/simple_corridor/: model.config  model.sdf
ubiquitous_display_gazebo/models/testworld/: model.config  model.sdf
ubiquitous_display_gazebo/models/testworld2/: testworld2
ubiquitous_display_gazebo/worlds/: cc2f.world  circuit.world  corridor_test.world  corridor_test_with_actor.world  gas_station.world  multi_train_world.world  simple_corridor.world  standing.world  test_world.world  test_world2.launch  test_world_with_actor.world  train_world.world
ubiquitous_display_simulations/: CMakeLists.txt  package.xml
(+3 files in other folders)
